--- a/styles.css
+++ b/styles.css
@@ -74,14 +74,14 @@ img {
     border: solid darkcyan 1px;
     border-radius: 5px;
 }
+/*Estilo de tabla */
 
 table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 10px;
-    border: 2px solid #999;
+    border: 2px
 }
-
 
 table thead {
     background-color: #dcdcdc;
